hphp/hack/test/typecheck/union/shape_idx_refine_opt.php.like_types.exp
File "shape_idx_refine_opt.php", line 10, characters 10-11:
Invalid return type (Typing[4163])
File "shape_idx_refine_opt.php", line 6, characters 12-15:
The field 'a' is optional
File "shape_idx_refine_opt.php", line 6, characters 22-22:
The field 'a' is defined as required
File "shape_idx_refine_opt.php", line 15, characters 12-13:
Invalid return type (Typing[4163])
File "shape_idx_refine_opt.php", line 13, characters 13-16:
The field 'a' is optional
File "shape_idx_refine_opt.php", line 13, characters 23-23:
The field 'a' is defined as required
